# iPay

./: .gitignore  CONTEXT.txt  DORAHACKS_SUBMISSION.md  LICENSE  MARKET_RESEARCH.md  README.md  SPEECH.md  STRATEGY.md  VIDEO_SCRIPT.md  demo-sequence.sh  package-lock.json  package.json
app/: .env.example  next.config.mjs  package-lock.json  package.json
app/public/: actions.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/actions.json/: route.ts
app/src/app/api/invoices/: route.ts
app/src/app/developer/: page.tsx
app/src/app/discover/: page.tsx
app/src/app/merchant/: layout.tsx  page.tsx
app/src/app/onboarding/: page.tsx
app/src/app/pay/: layout.tsx  page.tsx
app/src/app/pitch/: page.tsx
app/src/app/wallet/: page.tsx
app/src/components/: BlinkPreview.tsx  ChatMessage.tsx  CreateBlinkModal.tsx  LoyaltyBadge.tsx  PaymentSuccess.tsx  PaymentTable.tsx  ReceiptButton.tsx  RedeemModal.tsx  StatsCard.tsx
app/src/hooks/: useIPayProgram.ts
app/src/lib/: actions.ts  constants.ts  idl.ts  ipay_protocol.json  program.ts
docs/: AUDIT_BUSINESS_FINANCE.md  AUDIT_GAPS.md  AUDIT_LEGAL_COMPLIANCE.md  AUDIT_MARKET_COMPETITION.md  AUDIT_PRODUCT_UX.md  AUDIT_TECHNOLOGY.md  BUSINESS_PLAN.md  COMPLIANCE_ROADMAP.md  CONTEXT.txt  GLOBAL_EXPANSION_REPORT.md  INVESTOR_DECK_DATA.md  README.md  STRATEGY.md  TOKENOMICS.md
ipay_protocol/: Anchor.toml  package.json
ipay_protocol/programs/ipay_protocol/: Cargo.toml
ipay_protocol/programs/ipay_protocol/src/: lib.rs
ipay_protocol/tests/: ipay_protocol.ts
scripts/: initialize_platform.ts
(+26 files in other folders)
