[package]
name = "ipay_protocol"
version = "0.1.0"
description = "iPay - The Square of PayFi. Payments + Loyalty + AI on Solana."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ipay_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
